fixed alignment of the form

--- a/src/components/BmiForm/BmiForm.css
+++ b/src/components/BmiForm/BmiForm.css
@@ -1,18 +1,21 @@
 .app-form {
-  padding-left: 3rem;
-  padding-right: 3rem;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 750px) {
   .app-form {
     width: 50%;
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 }
 
 .box {
   display: flex;
   flex-direction: column;
-  width: 350px;
+  max-width: 350px;
   background: #303a52;
   height: 450px;
   margin: 0 auto;
